--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "blockchain",
+  "name": "project_1",
   "version": "1.0.0",
-  "description": "",
+  "description": "This project creates a Blockchain application to store data into the blocks",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/barfet/blockchain.git"
-  },
-  "type": "module",
-  "author": "",
+  "author": "Udacity - jose.morales@udacity.com",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/barfet/blockchain/issues"
-  },
-  "homepage": "https://github.com/barfet/blockchain#readme",
   "dependencies": {
-    "crypto-js": "^3.1.9-1"
+    "bitcoinjs-lib": "^5.2.0",
+    "bitcoinjs-message": "^2.2.0",
+    "body-parser": "^1.19.0",
+    "crypto-js": "^4.1.1",
+    "express": "^4.17.1",
+    "hex2ascii": "0.0.3",
+    "morgan": "^1.10.0"
   }
 }
